[metadata]
name = SCL
version = 0.6.1
author = Thomas Paviot <tpaviot@gmail.com>, Christopher HORLER (cshorler@googlemail.com), Devon Sparks (devonsparks.com)
description = SCL is a Python3-based library for parsing and manipulating ISO 10303 Part 21 ("STEP") files. 
url = https://github.com/stepcode/stepcode
project_urls =
    Bug Tracker = https://github.com/stepcode/stepcode/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    ply

[options.packages.find]
where=src

